[tool.poetry]
name = "tbot-tradingboat"
version = "0.1.0"
description = "The IBKR decoder on Tradingboat for Tradingview's Webhook"
authors = ["zolcsika71 <bushdoctor2008@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "tbot_tradingboat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^5.0.1"
ib-insync = "^0.9.86"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
setuptools = "^69.0.2"
wheel = "^0.42.0"
setuptools-scm = "^8.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
